# anastat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
anastat/: _types.py  bayes.py  ci.py  desc.py  dx.py  power.py  pyproject.toml  ss.py  tools.py  two_groups.py
